Autorisation page added, Regictration page added

--- a/src/pages/PasswordRecover/PasswordRecover.module.scss
+++ b/src/pages/PasswordRecover/PasswordRecover.module.scss
@@ -1,4 +1,4 @@
-.registration_container {
+.password_recover_container {
   width: 100%;
   height: 100%;
 
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
 
-  .registration_form {
+  .password_recover_form {
     padding: 24px;
     padding-bottom: 0;
     max-width: 500px;
@@ -28,6 +28,10 @@
 
       color: $blue;
       background-color: white;
+    }
+
+    .form {
+      min-width: 300px;
     }
   }
 
