--- a/src/pages/Autorisation/Autorisation.module.scss
+++ b/src/pages/Autorisation/Autorisation.module.scss
@@ -1,4 +1,4 @@
-.registration_container {
+.autorisation_container {
   width: 100%;
   height: 100%;
 
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
 
-  .registration_form {
+  .autorisation_form {
     padding: 24px;
     padding-bottom: 0;
     max-width: 500px;
@@ -31,7 +31,7 @@
     }
   }
 
-  .autorisation_link {
+  .registiration_link {
     margin-top: 10px;
 
     &:hover {
