Assessment page added

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,5 +1,8 @@
 //color
 $blue: #1890ff;
+$blue_lite: #54a0e8;
+$blue_brite: #90bce4;
+$blue_dark: #2a659c;
 
 //fonst
 $cursive_font: "Comfortaa", cursive;
