--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -3,6 +3,7 @@ $blue: #1890ff;
 $blue_lite: #54a0e8;
 $blue_brite: #90bce4;
 $blue_dark: #2a659c;
+$blue_dark_gradient: #3d77ad;
 
 //fonst
 $cursive_font: "Comfortaa", cursive;
