--- a/src/components/Assessment/Agreement/Agreement.module.scss
+++ b/src/components/Assessment/Agreement/Agreement.module.scss
@@ -25,8 +25,7 @@
 }
 
 .agreement_form {
-  // width: 200px;
-  // min-width: fit-content;
+  min-width: 300px;
   height: fit-content;
 
   margin: auto;
