--- a/src/components/Assessment/Objects/Objects.module.scss
+++ b/src/components/Assessment/Objects/Objects.module.scss
@@ -6,8 +6,19 @@
 
   background-color: gray;
 
+  .indexes {
+    width: 400px;
+
+    position: absolute;
+    z-index: 2;
+    top: 1em;
+    left: 1em;
+
+    background-color: #fff;
+  }
+
   .load_window {
-    padding: 1em;
+    padding: 1em 1.5em;
 
     position: absolute;
     z-index: 2;
@@ -20,19 +31,79 @@
     border: 2px solid $blue_dark;
     border-bottom: none;
 
+    .load_label {
+      padding: 0.5em 1em;
+
+      position: absolute;
+      bottom: 50%;
+      left: -2px;
+
+      transform: translate3d(-100%, 50%, 0);
+      transition: opacity 1s;
+      opacity: 0;
+
+      transition: color 0.5s;
+
+      background: #fff;
+      border: 2px solid $blue_dark;
+      border-right: none;
+
+      &.active {
+        opacity: 1;
+      }
+
+      .text {
+        color: green;
+      }
+
+      .icon {
+        margin-left: 0.5em;
+        color: green;
+      }
+    }
+
+    .file_loader {
+
+      .text {
+        height: 32px;
+        padding: 4px 15px;
+        cursor: pointer;
+
+        display: block;
+
+        font-size: 14px;
+        color: #fff;
+        line-height: 1.5715;
+        font-weight: 400;
+        font-feature-settings: "tnum";
+        text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+
+        border: 1px solid $blue_dark;
+        border-color: #1890ff;
+        border-radius: 2px;
+        background: #1890ff;
+        box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
+      }
+
+      input[type="file"] {
+        display: none;
+      }
+    }
+
     .next {
       padding: 0.5em;
 
       position: absolute;
       bottom: 50%;
-      right: -1px;
+      right: -2px;
 
       transform: translate3d(100%, 50%, 0);
-      transition: opacity 0.5s;
+      transition: opacity 1s;
       opacity: 0;
 
       background-color: #fff;
       border: 2px solid $blue_dark;
+      border-left: none;
 
       &.active {
         opacity: 1;
