--- a/src/components/Assessment/Agreement/Agreement.module.scss
+++ b/src/components/Assessment/Agreement/Agreement.module.scss
@@ -1,32 +1,43 @@
 .container {
   flex: 1;
-  min-height: 100%;
+  height: 100%;
   width: 100%;
+  overflow: auto;
 
   padding: 1em;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 
   background-color: #fff;
 
   .agreement_row {
-    width: 100%;
+    @include gray-scroll;
+    max-width: 100%;
     overflow: auto;
     display: flex;
-    gap: 2em;
   }
 
+  .pool_title {
+    padding: 1em;
+    text-align: center;
+    color: $blue_dark;
+  }
+
+  .pool_objects {}
+
   .btns {
+    padding-bottom: 2em;
     display: flex;
     justify-content: space-between;
   }
 }
 
 .agreement_form {
-  min-width: 300px;
+  flex: 1;
   height: fit-content;
+  padding: 0 1em;
 
-  margin: auto;
+  border-left: 1px solid rgba(26, 26, 202, 0.444);
+
+  &:first-child {
+    border-left: none;
+  }
 }
