--- a/src/components/Assessment/Bilding/Bilding.module.scss
+++ b/src/components/Assessment/Bilding/Bilding.module.scss
@@ -1,12 +1,9 @@
 .container {
   width: 100%;
-  min-height: 100%;
+  height: 100%;
+  overflow: auto;
 
   padding: 1.5em;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 
   background-color: #fff;
 
@@ -17,18 +14,24 @@
     overflow-y: hidden;
 
     display: flex;
-    gap: 1.5em;
   }
 
   .btns {
+    padding-bottom: 2em;
     display: flex;
     justify-content: space-between;
   }
 }
 
 .bilding_form {
-  min-width: 300px;
+  flex: 1;
+  width: max-content;
   height: fit-content;
+  padding: 0 1em;
 
-  margin: auto;
+  border-left: 1px solid rgba(26, 26, 202, 0.444);
+
+  &:first-child {
+    border-left: none;
+  }
 }
