--- a/src/components/Assessment/Calculation/Calculation.module.scss
+++ b/src/components/Assessment/Calculation/Calculation.module.scss
@@ -51,6 +51,8 @@
 
       .analogs_form {
         width: 100%;
+        height: fit-content;
+        max-height: 100%;
         @include gray-scroll;
         overflow: auto;
 
